# voxxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci-build.yml  rust-multios-build.yml
src/: audio_thread.rs  lpc.rs  main.rs  phoneme.rs  worker_thread.rs
